<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/title_home"
            android:id="@+id/home_nav"
            android:icon="@drawable/ic_home"
            app:showAsAction="always"/>
        <item
            android:title="@string/favorites"
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite"
            app:showAsAction="always"/>
    </group>

    <item
        android:title="@string/help_btn"
        android:id="@+id/help_item"
        android:icon="@drawable/ic_help"
        app:showAsAction="always"/>
</menu>